src/test/ui/feature-gates/feature-gate-asm.stderr
error[E0658]: inline assembly is not stable enough for use and is subject to change (see issue #29722)
  --> $DIR/feature-gate-asm.rs:13:9
   |
LL |         asm!(""); //~ ERROR inline assembly is not stable enough
   |         ^^^^^^^^^
   |
   = help: add #![feature(asm)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
